--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <h4 class="education-year">2021-24</h4>
                 <h4>Diploma in civil engineering </h4>
                 <p>GPA 9.87/10</p>
-                    <p class="text-blue main-font">ADD ON ("A PART WITH STUDIES")</p>
+                 <h4> <span class="text-blue main-font">A PART WITH STUDIES.</span></h>
                 <ul>
                   <li>Corporal at National Cadet Core 1-(T)EME Unit.</li>
                   <li>Participanted in National Level Handball compeition held at karauli.</li>
