--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
               </div>
               <div class="card-column-large">
                 <h4 class="education-year">2021-24</h4>
-                <h4>Diploma in civil engineering </h4>
-                <p>GPA 9.87/10</p>
-                 <h4> <span class="text-blue main-font">A PART WITH STUDIES.</span></h>
+                <h4 style="text-align: center;"><span class="text-blue main-font">Diploma in civil engineering </h4>
+                <p style="text-align: center;">GPA 9.87/10</p>
+                 <h4 style="text-align: center;"> <span class="text-blue main-font">A PART WITH STUDIES.</span></h>
                 <ul>
                   <li>Corporal at National Cadet Core 1-(T)EME Unit.</li>
                   <li>Participanted in National Level Handball compeition held at karauli.</li>
