--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
                 <img src="/img/qut-Logo.png" alt="">
               </div>
               <div class="card-column-large">
-                <h4 class="education-year">2021-24</h4>
+                <h4 class="education-year"style="text-align: center;"><b>2021-24</b></h4>
                 <h4 style="text-align: center;"><span class="text-blue main-font"><b>Diploma in civil engineering </b></h4>
                 <p style="text-align: center;"><b>GPA 9.87/10</b></p>
                  <h4 style="text-align: center;"><span class="text-blue main-font">A PART WITH STUDIES.</span></h4>
-                <ul>
+                <ul style="text-align: center;">
                   <li>Corporal at National Cadet Core 1-(T)EME Unit.</li>
                   <li>Participanted in National Level Handball compeition held at karauli.</li>
                   <li>Secured silver medal at sate level Handball.</li>
