--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
                 <h4><span class="text-blue main-font"><b>Diploma in civil engineering </b></h4>
                 <p><b>GPA 9.87/10</b></p>
                  <h4 style="text-align: center;"><span class="text-blue main-font">A PART WITH STUDIES.</span></h4>
-                <ul>
-                  <li>Corporal at National Cadet Core 1-(T)EME Unit.</li>
+                <ul><b>
+                  <li>Corporal at National Cadet Core 1(T)EME Unit.</li>
                   <li>Participanted in National Level Handball compeition held at karauli.</li>
                   <li>Secured silver medal at sate level Handball.</li>
                   <li>Interested to sketch perspectives.</li> 
                   <li>Partcipated in technical events at Osmania University.</li>
-                  <li>Attened workshop on Concrete canoe hosted by BVRIT. </li>
+                  <li>Attened workshop on Concrete canoe hosted by BVRIT. </li></b>
                 </ul>
               </div>
             </div>
