--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               </div>
               <div class="card-column-large">
                 <h4 class="education-year"style="text-align: center;"><b>2021-24</b></h4>
-                <h4><span class="text-blue main-font"><b>Diploma in civil engineering </b></h4>
+                <h4><span class="text-blue main-font"><b>Diploma in civil engineering.</span> at GOVERNMEMT POLYTECHNIC HYDERABAD </b></h4>
                 <p><b>GPA 9.87/10</b></p>
                  <h4 style="text-align: center;"><span class="text-blue main-font">A PART WITH STUDIES.</span></h4>
                 <ul><b>
