--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
         <h2 class="text-white main-font">Technical <span class="text-blue main-font">Skills</span></h2>
         <ul class="skills-icons">
           
-          <li><span class="iconify" data-icon="skill-icons:autocad-light" data-width="90" data-height="90"></span><span>AutoCAD</span></li>          
-                    <li><img width="90" height="90" src="https://img.icons8.com/fluency/48/staad-pro.png" alt="staad-pro"/></span><span class="text-center">STAAD.pro</span></li>       
-                    <li><span class="iconify" data-icon="logos:microsoft-icon" data-inline="false" data-width="90px" data-height="90px"></span><span>MicroSoftoffice</span></li>
-                   <li><img width="90" height="90" src="https://img.icons8.com/fluency/96/canva.png" alt="canva"/><span class="text-center">Canva</span></li>       
-                   <li><span class="iconify" data-icon="simple-icons:autodeskrevit" data-inline="false"data-width="90px" data-height="90px"></span><span class="text-center">Revit</span></li>
-                   <li><img width="90" height="90" src="https://img.icons8.com/color/48/c-programming.png" alt="c-programming"/><span class="text-center">C</span></li>
-                   <li><img width="90" height="90" src="https://img.icons8.com/color/48/gis.png" alt="gis"/><span class="text-center">GIS</li>
+          <li><span class="iconify" data-icon="skill-icons:autocad-light" data-width="90" data-height="90"></span><span>AutoCAD</span></li> 
+            <li><span class="iconify" data-icon="simple-icons:autodeskrevit" data-inline="false"data-width="90px" data-height="90px"></span><span class="text-center">Revit</span></li>
+ <li><img width="90" height="90" src="https://img.icons8.com/fluency/48/staad-pro.png" alt="staad-pro"/></span><span class="text-center">STAAD.pro</span></li>   
+          <li><span class="iconify" data-icon="logos:microsoft-icon" data-inline="false" data-width="90px" data-height="90px"></span><span>MicroSoftoffice</span></li>
+           <li><img width="90" height="90" src="https://img.icons8.com/color/48/gis.png" alt="gis"/><span class="text-center">GIS</li>
+           <li><img width="90" height="90" src="https://img.icons8.com/fluency/96/canva.png" alt="canva"/><span class="text-center">Canva</span></li>     
+            <li><img width="90" height="90" src="https://img.icons8.com/color/48/c-programming.png" alt="c-programming"/><span class="text-center">C</span></li>
                 </ul>
       </div>
 
@@ -231,7 +231,7 @@
               </div>
               <div class="card-column-large">
                 <h4 class="education-year"style="text-align: center;"><b>2021-24</b></h4>
-                <h4><span class="text-blue main-font"><b>Diploma in civil engineering.</span> at GOVERNMEMT POLYTECHNIC HYDERABAD </b></h4>
+                <h4><span class="text-blue main-font"><b>Diploma in Civil Engineering</span> at GOVERNMEMT POLYTECHNIC HYDERABAD </b></h4>
                 <p><b>GPA 9.87/10</b></p>
                  <h4 style="text-align: center;"><span class="text-blue main-font">A PART WITH STUDIES.</span></h4>
                 <ul><b>
@@ -239,8 +239,8 @@
                   <li>Participanted in National Level Handball compeition held at karauli.</li>
                   <li>Secured silver medal at sate level Handball.</li>
                   <li>Interested to sketch perspectives.</li> 
-                  <li>Partcipated in technical events at Osmania University.</li>
-                  <li>Attened workshop on Concrete canoe hosted by BVRIT. </li></b>
+                  <li>Partcipated in technical events at Osmania University,Hyderabad.</li>
+                  <li>Attened workshop on Concrete canoe hosted by BVRIT,Medak. </li></b>
                 </ul>
               </div>
             </div>
