--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </ul>
             <h5>Modelling the very first assigment which lighted up the  creavtive juices  from core structural concepts of design.It covers the higlights of the simple and yet aesthetics of le corbusier's design which is setting example of minimalistic design.</h5>
             <div class="project-links">
-              <a href="https://www.youtube.com/watch?v=uhyC0M4WIl4" class="btn-blue btn-small hover-bg-light" target="_blank"> <i class="fab fa-youtube"></i> Demo</a>
+              <a href="https://youtu.be/2TuhToCBJfI?si=8QV9OHZ9I_ej2Pkx" class="btn-blue btn-small hover-bg-light" target="_blank"> <i class="fab fa-youtube"></i> Source</a>
               <a href="https://medium.com/@095shiva/the-art-of-architectural-modeling-my-tribute-to-villa-savoye-d39d25c59025" class="btn-blue-outline btn-small mx-1" target="_blank"> <i class="fab fa-medium"></i
                 > Medium</a>
             </div>
