ADDED UP THE SKILSS.html

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
            <li><img width="90" height="90" src="https://img.icons8.com/fluency/96/canva.png" alt="canva"/><span class="text-center">Canva</span></li>     
             <li><img width="90" height="90" src="https://img.icons8.com/color/48/c-programming.png" alt="c-programming"/><span class="text-center">C</span></li>
             <li><img width="90" height="90" src="https://img.icons8.com/?size=100&id=l75OEUJkPAk4&format=png&color=000000n" alt="PYTHON"/><span class="text-center">python</span></li>
+           <li><img width="90" height="90" src="https://images.squarespace-cdn.com/content/v1/5efbb086aa75d475fc37463a/1623110149356-STPZJH4VYTKVFD0MJTZL/oracle.png?format=500wn" alt="PROJECT MANAGEMENT"/><span class="text-center">Project management</span></li>
           </ul>
       </div>
 
