--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <li><img width="90" height="90" src="https://img.icons8.com/color/48/c-programming.png" alt="c-programming"/><span class="text-center">C</span></li>
             <li><img width="90" height="90" src="https://img.icons8.com/?size=100&id=l75OEUJkPAk4&format=png&color=000000n" alt="PYTHON"/><span class="text-center">python</span></li>
            <li><img width="90" height="90" src="https://images.squarespace-cdn.com/content/v1/5efbb086aa75d475fc37463a/1623110149356-STPZJH4VYTKVFD0MJTZL/oracle.png?format=500wn" alt="PROJECT MANAGEMENT"/><span class="text-center">Project management</span></li>
-           <li><img width="90" height="90" src="https://www.google.com/imgres?q=enscape%20icon&imgurl=https%3A%2F%2Faecplustech.s3.amazonaws.com%2Ftool%2F7f45a980-9110-4936-b681-522d2eae251e.jpg&imgrefurl=https%3A%2F%2Fwww.aecplustech.com%2Ftools%2Fenscape&docid=DdQYp-6aoPFaGM&tbnid=oak52hTxhF4J3M&vet=12ahUKEwjFypimuKaPAxWgTmwGHfxLGuIQM3oECB8QAA..i&w=1000&h=1000&hcb=2&ved=2ahUKEwjFypimuKaPAxWgTmwGHfxLGuIQM3oECB8QAA" alt="PROJECT MANAGEMENT"/><span class="text-center">Enscape</span></li>
+           <li><img width="90" height="90" src="https://static.chaos.com/images/assets/000/025/042/original/enscape-logo-color-white-rgb.svg?1746706177" alt="ENSCAPE"/><span class="text-center">Enscape</span></li>
           </ul>
       </div>
 
