--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
         <h2 class="text-white main-font">Technical <span class="text-blue main-font">Skills</span></h2>
         <ul class="skills-icons">
           
-          <li><img width="90" height="90" src="https://damassets.autodesk.net/content/dam/autodesk/www/product-imagery/lockup-610x66/autocad-2023-white-lockup-610x66.png"></span><span>AutoCAD</span></li> 
-            <li><img width="90" height="90" src="https://damassets.autodesk.net/content/dam/autodesk/www/product-imagery/lockup-610x66/revit-2023-lockup-610x66.png"></span><span class="text-center">Revit</span></li>
+          <li><img width="180" height="90" src="https://damassets.autodesk.net/content/dam/autodesk/www/product-imagery/lockup-610x66/autocad-2023-white-lockup-610x66.png"></span><span>AutoCAD</span></li> 
+            <li><img width="180" height="90" src="https://damassets.autodesk.net/content/dam/autodesk/www/product-imagery/lockup-610x66/revit-2023-lockup-610x66.png"></span><span class="text-center">Revit</span></li>
  <li><img width="90" height="90" src="https://img.icons8.com/fluency/48/staad-pro.png" alt="staad-pro"/></span><span class="text-center">STAAD.pro</span></li>   
           <li><span class="iconify" data-icon="logos:microsoft-icon" data-inline="false" data-width="90px" data-height="90px"></span><span>MicroSoftoffice</span></li>
-           <li><img width="90" height="90" src="https://img.icons8.com/color/48/gis.png" alt="gis"/><span class="text-center">GIS</li>
+           <li><img width="90" height="90" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/ArcGIS_globe.png/900px-ArcGIS_globe.png?20200916120335" alt="gis"/><span class="text-center">GIS</li>
            <li><img width="90" height="90" src="https://img.icons8.com/fluency/96/canva.png" alt="canva"/><span class="text-center">Canva</span></li>     
             <li><img width="90" height="90" src="https://img.icons8.com/color/48/c-programming.png" alt="c-programming"/><span class="text-center">C</span></li>
             <li><img width="90" height="90" src="https://img.icons8.com/?size=100&id=l75OEUJkPAk4&format=png&color=000000n" alt="PYTHON"/><span class="text-center">python</span></li>
