--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
            <li><img width="90" height="90" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/ArcGIS_globe.png/900px-ArcGIS_globe.png?20200916120335" alt="gis"/><span class="text-center">GIS</li>
            <li><img width="90" height="90" src="https://img.icons8.com/fluency/96/canva.png" alt="canva"/><span class="text-center">Canva</span></li>     
             <li><img width="90" height="90" src="https://img.icons8.com/color/48/c-programming.png" alt="c-programming"/><span class="text-center">C</span></li>
-           <li><img width="90" height="90" src="https://img.favpng.com/10/23/21/c-programming-language-icon-png-favpng-878WK0RF2zxn7b6TimT7zquZN.jpg" alt="c++-programming"/><span class="text-center">C++</span></li>
+           <li><img width="90" height="90" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/459px-ISO_C%2B%2B_Logo.svg.png?20170928190710" alt="c++-programming"/><span class="text-center">C++</span></li>
             <li><img width="90" height="90" src="https://img.icons8.com/?size=100&id=l75OEUJkPAk4&format=png&color=000000n" alt="PYTHON"/><span class="text-center">python</span></li>
            <li><img width="90" height="90" src="https://images.squarespace-cdn.com/content/v1/5efbb086aa75d475fc37463a/1623110149356-STPZJH4VYTKVFD0MJTZL/oracle.png?format=500wn" alt="PROJECT MANAGEMENT"/><span class="text-center">Project management</span></li>
            <li><img width="90" height="90" src="https://static.chaos.com/images/assets/000/025/042/original/enscape-logo-color-white-rgb.svg?1746706177" alt="ENSCAPE"/><span class="text-center">Enscape</span></li>
